--- a/about.html
+++ b/about.html
@@ -487,7 +487,7 @@
                     <ul id="mobile-menu-active">
 
 
-                        <li><a class="mm-link" href="index.html">Home</a></li>
+                        <li><a class="mm-link" href="../index.html">Home</a></li>
                         <li><a class="mm-link" href="contact.html">Contact</a></li>
                         <li><a class="mm-link" href="about.html">About</a></li>
                     </ul>
@@ -514,7 +514,7 @@
                 community and
                 awareness.
             </p>
-            <img src="/assets/images/About us/global signal 3.png" alt="News Team" class="about-image">
+            <img src="assets/images/About us/global signal 3.png" alt="News Team" class="about-image">
         </div>
 
         <div class="about-section">
@@ -523,7 +523,7 @@
                 investigative journalism to expert analysis, SMHF Global is committed to maintaining the highest
                 standards of reporting.
             </p>
-            <img src="/assets/images/About us/perfection.png" alt="Global News" class="about-image">
+            <img src="assets/images/About us/perfection.png" alt="Global News" class="about-image">
         </div>
 
         <div class="about-section">
@@ -533,7 +533,7 @@
                 entertainment. Our platform connects people to stories that matter, fostering a sense of community and
                 awareness.
             </p>
-            <img src="/assets/images/smhf dark logo.png" alt="Global News" class="about-image">
+            <img src="assets/images/smhf dark logo.png" alt="Global News" class="about-image">
         </div>
     </div>
 
@@ -828,6 +828,7 @@
 
 
 </body>
+
 
 
 </html>
