--- a/about.html
+++ b/about.html
@@ -487,7 +487,7 @@
                     <ul id="mobile-menu-active">
 
 
-                        <li><a class="mm-link" href="../index.html">Home</a></li>
+                        <li><a class="mm-link" href="../../index.html">Home</a></li>
                         <li><a class="mm-link" href="contact.html">Contact</a></li>
                         <li><a class="mm-link" href="about.html">About</a></li>
                     </ul>
@@ -832,3 +832,4 @@
 
 
 </html>
+
