--- a/about.html
+++ b/about.html
@@ -458,7 +458,7 @@
 
                                     <ul class="nav__menu">
 
-                                        <li class="dropdown"><a class="menu-item item-1" href="/index.html">Home</a>
+                                        <li class="dropdown"><a class="menu-item item-1" href="../../index.html">Home</a>
 
                                         </li>
 
@@ -832,4 +832,5 @@
 
 
 </html>
+
 
