--- a/index.html
+++ b/index.html
@@ -780,7 +780,7 @@
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
                                     <div class="banner-single banner-single-1">
-                                        <div class="overlay"></div>
+                                        <div class="overlay"> <img src="assets/main-post/Makkah.jpg"></div>
                                         <div class="container">
                                             <div class="banner-content-1">
                                                 <a href="#" class="content-catagory-tag">Travel</a>
@@ -1952,5 +1952,6 @@
     </script>
     
     <!-- chatbot script khatam -->
+
 
 </body>
