--- a/index.html
+++ b/index.html
@@ -780,7 +780,7 @@
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
                                     <div class="banner-single banner-single-1">
-                                        <div class="overlay"> <img src="assets/main-post/Makkah.jpg"></div>
+                                        <div class="overlay"></div>
                                         <div class="container">
                                             <div class="banner-content-1">
                                                 <a href="#" class="content-catagory-tag">Travel</a>
@@ -1955,3 +1955,4 @@
 
 
 </body>
+
