--- a/index.html
+++ b/index.html
@@ -1694,62 +1694,61 @@
     <!-- karachi weather ki script khatam -->
 
     <!-- news api script start -->
-    <script>
-        const apiUrls = {
-            business: 'https://gnews.io/api/v4/top-headlines?country=pk&category=business&apikey=08f712ec6affe0f0323d4e7fda780aac',
-            entertainment: 'https://gnews.io/api/v4/top-headlines?country=pk&category=entertainment&apikey=08f712ec6affe0f0323d4e7fda780aac',
-            politics: 'https://gnews.io/api/v4/top-headlines?country=pk&category=general&apikey=08f712ec6affe0f0323d4e7fda780aac',
-            sports: 'https://gnews.io/api/v4/top-headlines?country=pk&category=sports&apikey=08f712ec6affe0f0323d4e7fda780aac',
-            technology: 'https://gnews.io/api/v4/top-headlines?country=pk&category=technology&apikey=08f712ec6affe0f0323d4e7fda780aac',
-        };
+<script>
+    const apiKey = "08f712ec6affe0f0323d4e7fda780aac";
 
-        async function fetchNews(category) {
-            try {
-                const response = await fetch(apiUrls[category]);
-                const data = await response.json();
-                const newsContainer = document.getElementById(`${category}-news`);
-                newsContainer.innerHTML = ''; // Clear previous content
+    const apiUrls = {
+        business: `https://api.allorigins.win/raw?url=https://gnews.io/api/v4/top-headlines?country=pk&category=business&apikey=${apiKey}`,
+        entertainment: `https://api.allorigins.win/raw?url=https://gnews.io/api/v4/top-headlines?country=pk&category=entertainment&apikey=${apiKey}`,
+        politics: `https://api.allorigins.win/raw?url=https://gnews.io/api/v4/top-headlines?country=pk&category=general&apikey=${apiKey}`,
+        sports: `https://api.allorigins.win/raw?url=https://gnews.io/api/v4/top-headlines?country=pk&category=sports&apikey=${apiKey}`,
+        technology: `https://api.allorigins.win/raw?url=https://gnews.io/api/v4/top-headlines?country=pk&category=technology&apikey=${apiKey}`,
+    };
 
-                data.articles.forEach((article) => {
-                    const newsItem = document.createElement('div');
-                    newsItem.classList.add('news-item');
-                    newsItem.innerHTML = `
-                        <img src="${article.image || 'https://via.placeholder.com/150'}" alt="News Image">
-                        <h3>${article.title}</h3>
-                        <p>${article.description || 'No description available.'}</p>
-                        <a href="${article.url}" target="_blank">Read More</a>
-                    `;
-                    newsContainer.appendChild(newsItem);
-                });
-            } catch (error) {
-                console.error("Error fetching news:", error);
-            }
-        }
+    async function fetchNews(category) {
+        try {
+            const response = await fetch(apiUrls[category]);
+            const data = await response.json();
+            const newsContainer = document.getElementById(`${category}-news`);
+            newsContainer.innerHTML = '';
 
-        // Fetch data for each category
-        ['business', 'entertainment', 'sports', 'technology', 'politics'].forEach(fetchNews);
-
-        // Scroll and highlight functionality
-        document.querySelectorAll(".dropdown-content a").forEach(link => {
-            link.addEventListener("click", (event) => {
-                event.preventDefault();
-                const targetId = link.getAttribute("href").substring(1); // Extract ID
-                const targetSection = document.getElementById(targetId);
-
-                // Smooth scroll to section
-                const offsetTop = targetSection.offsetTop - 20; // Adjust to stop at the right position
-                window.scrollTo({ top: offsetTop, behavior: "smooth" });
-
-                // Highlight heading
-                const targetHeading = targetSection.querySelector("h2");
-                document.querySelectorAll("section h2").forEach(h2 => h2.classList.remove("highlight"));
-                targetHeading.classList.add("highlight");
-
-                setTimeout(() => targetHeading.classList.remove("highlight"), 2000);
+            data.articles.forEach((article) => {
+                const newsItem = document.createElement('div');
+                newsItem.classList.add('news-item');
+                newsItem.innerHTML = `
+                    <img src="${article.image || 'https://via.placeholder.com/150'}" alt="News Image">
+                    <h3>${article.title}</h3>
+                    <p>${article.description || 'No description available.'}</p>
+                    <a href="${article.url}" target="_blank">Read More</a>
+                `;
+                newsContainer.appendChild(newsItem);
             });
+        } catch (error) {
+            console.error("Error fetching news:", error);
+        }
+    }
+
+    ['business', 'entertainment', 'sports', 'technology', 'politics'].forEach(fetchNews);
+
+    document.querySelectorAll(".dropdown-content a").forEach(link => {
+        link.addEventListener("click", (event) => {
+            event.preventDefault();
+            const targetId = link.getAttribute("href").substring(1);
+            const targetSection = document.getElementById(targetId);
+
+            const offsetTop = targetSection.offsetTop - 20;
+            window.scrollTo({ top: offsetTop, behavior: "smooth" });
+
+            const targetHeading = targetSection.querySelector("h2");
+            document.querySelectorAll("section h2").forEach(h2 => h2.classList.remove("highlight"));
+            targetHeading.classList.add("highlight");
+
+            setTimeout(() => targetHeading.classList.remove("highlight"), 2000);
         });
-    </script>
-    <!-- news api script khatam -->
+    });
+</script>
+<!-- news api script khatam -->
+
 
     <!-- modal script start -->
     <script>
@@ -1955,4 +1954,5 @@
 
 
 </body>
+
 
