--- a/index.html
+++ b/index.html
@@ -1270,7 +1270,7 @@
                     <!-- video start -->
                     <div class="video-section">
                         <video autoplay muted loop>
-                            <source src="/news intro.mp4" type="video/mp4">
+                            <source src="news intro.mp4" type="video/mp4">
                             Your browser does not support the video tag.
                         </video>
                     </div>
@@ -1954,5 +1954,6 @@
 
 
 </body>
+
 
 
