--- a/about.html
+++ b/about.html
@@ -373,7 +373,7 @@
                             <div class="rts-menu rts-menu1 m-0">
                                 <nav class="menus menu-toggle">
                                     <ul class="nav__menu">
-                                        <li class="dropdown"><a class="menu-item item-1" href="/index.html">Home</a></li>
+                                        <li class="dropdown"><a class="menu-item item-1" href="index.html">Home</a></li>
                                         <li><a class="menu-item active" href="contact.html">Contact</a></li>
                                         <li><a class="menu-item active" href="about.html">About</a></li>
                                     </ul>
@@ -417,7 +417,7 @@
                 fast-paced digital world. Our platform connects people to stories that matter, fostering a sense of
                 community and awareness.
             </p>
-            <img src="/assets/images/About us/global signal 3.png" alt="News Team" class="about-image">
+            <img src="assets/images/About us/global signal 3.png" alt="News Team" class="about-image">
         </div>
 
         <div class="about-section">
@@ -426,7 +426,7 @@
                 investigative journalism to expert analysis, SMHF Global is committed to maintaining the highest
                 standards of reporting.
             </p>
-            <img src="/assets/images/About us/perfection.png" alt="Global News" class="about-image">
+            <img src="assets/images/About us/perfection.png" alt="Global News" class="about-image">
         </div>
 
         <div class="about-section">
@@ -436,7 +436,7 @@
                 entertainment. Our platform connects people to stories that matter, fostering a sense of community and
                 awareness.
             </p>
-            <img src="/assets/images/smhf dark logo.png" alt="Global News" class="about-image">
+            <img src="assets/images/smhf dark logo.png" alt="Global News" class="about-image">
         </div>
     </div>
 
@@ -613,3 +613,4 @@
 </body>
 
 </html>
+
