--- a/contact.html
+++ b/contact.html
@@ -290,7 +290,7 @@
 
                                     <ul class="nav__menu">
 
-                                        <li class="dropdown"><a class="menu-item item-1" href="/index.html">Home</a>
+                                        <li class="dropdown"><a class="menu-item item-1" href="index.html">Home</a>
 
                                         </li>
 
@@ -754,6 +754,7 @@
     <!-- chatbot script khatam -->
 
 </body>
+
 
 
 </html>
