--- a/about.html
+++ b/about.html
@@ -437,7 +437,7 @@
 
 <section class="section">
   <div class="section-grid reveal">
-    <img src="https://cdn.pixabay.com/photo/2016/03/26/13/09/newspaper-1283009_1280.jpg">
+    <img src="">
     <div>
       <h2>Global News & Signal Coverage</h2>
       <p>
@@ -488,7 +488,7 @@
         SMHF Global stands where journalism meets intelligence.
       </p>
     </div>
-    <img src="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?q=80&w=1200&auto=format&fit=crop">
+    <img src="assets/images/About us/second">
   </div>
 </section>
 
@@ -674,5 +674,6 @@ document.querySelectorAll(".reveal").forEach(el=>observer.observe(el));
 </body>
 
 </html>
+
 
 
