--- a/about.html
+++ b/about.html
@@ -488,7 +488,7 @@
         SMHF Global stands where journalism meets intelligence.
       </p>
     </div>
-    <img src="assets/images/About us/second">
+    <img src="assets/images/About us/second.png">
   </div>
 </section>
 
@@ -674,6 +674,7 @@ document.querySelectorAll(".reveal").forEach(el=>observer.observe(el));
 </body>
 
 </html>
+
 
 
 
