--- a/about.html
+++ b/about.html
@@ -247,7 +247,7 @@
 .about-hero{
   background:
   linear-gradient(rgba(10,25,47,.75),rgba(10,25,47,.75)),
-  url("https://images.unsplash.com/photo-1504711434969-e33886168f5c?q=80&w=1600&auto=format&fit=crop");
+  url(    <img src="assets/images/about-us/banner.avif">);
   background-size:cover;
   background-position:center;
   color:#fff;
@@ -431,7 +431,7 @@
         and emerging markets.
       </p>
     </div>
-    <img src="https://images.unsplash.com/photo-1525182008055-f88b95ff7980?q=80&w=1200&auto=format&fit=crop">
+    <img src="assets/images/about-us/first.avif">
   </div>
 </section>
 
@@ -448,6 +448,7 @@
         Every report is backed by verified data, expert validation, and on-ground intelligence.
       </p>
     </div>
+          <img src="assets/images/about-us/second.png">
   </div>
 </section>
 
@@ -488,7 +489,7 @@
         SMHF Global stands where journalism meets intelligence.
       </p>
     </div>
-    <img src="assets/images/about-us/second.png">
+    <img src="assets/images/about-us/third.avif">
   </div>
 </section>
 
@@ -674,6 +675,7 @@ document.querySelectorAll(".reveal").forEach(el=>observer.observe(el));
 </body>
 
 </html>
+
 
 
 
