--- a/about.html
+++ b/about.html
@@ -249,6 +249,7 @@
   linear-gradient(rgba(10,25,47,.75),rgba(10,25,47,.75)),
   url(    <img src="assets/images/about-us/banner.avif">);
   background-size:cover;
+    padding: 100px 20px;
   background-position:center;
   color:#fff;
   text-align:center;
@@ -675,6 +676,7 @@ document.querySelectorAll(".reveal").forEach(el=>observer.observe(el));
 </body>
 
 </html>
+
 
 
 
