--- a/about.html
+++ b/about.html
@@ -244,16 +244,17 @@
 
 
 /* header */
-.about-hero{
-  background:
-  linear-gradient(rgba(10,25,47,.75),rgba(10,25,47,.75)),
-  url( <img src="assets/images/about-us/banner.avif">);
-  background-size:cover;
-  background-position:center;
-  color:#fff;
-  text-align:center;
-  padding:120px 20px;
+.about-hero {
+  background: 
+    linear-gradient(rgba(10,25,47,.75), rgba(10,25,47,.75)),
+    url('assets/images/about-us/banner.avif');
+  background-size: cover;
+  background-position: center;
+  color: #fff;
+  text-align: center;
+  padding: 120px 20px;
 }
+
 .about-hero h1{
   font-size:3.4rem;
 }
@@ -675,6 +676,7 @@ document.querySelectorAll(".reveal").forEach(el=>observer.observe(el));
 </body>
 
 </html>
+
 
 
 
