--- a/about.html
+++ b/about.html
@@ -250,7 +250,7 @@
     url('assets/images/about-us/banner.avif');
   background-size: cover;
   background-position: center;
-  color: #fff;
+  color: #14d7d7;
   text-align: center;
   padding: 120px 20px;
 }
@@ -438,7 +438,6 @@
 
 <section class="section">
   <div class="section-grid reveal">
-    <img src="">
     <div>
       <h2>Global News & Signal Coverage</h2>
       <p>
@@ -676,6 +675,7 @@ document.querySelectorAll(".reveal").forEach(el=>observer.observe(el));
 </body>
 
 </html>
+
 
 
 
