--- a/about.html
+++ b/about.html
@@ -250,18 +250,20 @@
     url('assets/images/about-us/banner.avif');
   background-size: cover;
   background-position: center;
-  color: #14d7d7;
+  color: #fff;
   text-align: center;
   padding: 120px 20px;
 }
 
 .about-hero h1{
   font-size:3.4rem;
+    color: #14d7d7;
 }
 .about-hero p{
   opacity:.8;
   max-width:700px;
   margin:15px auto 0;
+     color: #14d7d7;
 }
 
 /* layout */
@@ -675,6 +677,7 @@ document.querySelectorAll(".reveal").forEach(el=>observer.observe(el));
 </body>
 
 </html>
+
 
 
 
