--- a/about.html
+++ b/about.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -32,7 +31,6 @@
         width: 200px;
         margin-right: auto;
     }
-
     /* logo styling khatam */
     .container01 {
         max-width: 900px;
@@ -43,14 +41,12 @@
         border-radius: 10px;
         text-align: center;
     }
-
     iframe {
         width: 100%;
         height: 400px;
         border: none;
         border-radius: 10px;
     }
-
     /* karachi weather ki styling */
     .container01 {
         display: flex;
@@ -58,7 +54,6 @@
         justify-content: space-between;
         padding: 15px;
     }
-
     a {
         text-decoration: none;
         color: #333;
@@ -68,7 +63,6 @@
         font-weight: bold;
         font-style: italic;
     }
-
     #temp {
         font-size: 15px;
         margin: 0;
@@ -76,7 +70,6 @@
         font-style: italic;
         color: #007bff;
     }
-
     #time {
         font-size: 15px;
         margin: 2px 0 0;
@@ -84,31 +77,24 @@
         font-style: italic;
         color: #555;
     }
-
     @media screen and (max-width: 320px) {
         .container01 {
             flex-direction: column;
             text-align: center;
         }
-
         a {
             margin-bottom: 10px;
         }
     }
-
     @media screen and (max-width: 513px) {
         .container01 {
             flex-direction: column;
             text-align: center;
         }
-
         a {
             margin-bottom: 10px;
         }
     }
-
-
-
     /* Chatbot Enhanced Styling */
     #chatContainer {
         background: linear-gradient(145deg, #ffffff, #f0f8ff);
@@ -124,7 +110,6 @@
         animation: fadeIn 0.4s ease;
         border: 1px solid #e0e0e0;
     }
-
     #chatbox {
         padding: 15px;
         height: 350px;
@@ -132,7 +117,6 @@
         background: #f9f9f9;
         border-radius: 10px 10px 0 0;
     }
-
     #chatbox .user-message {
         text-align: right;
         margin: 10px 0;
@@ -143,7 +127,6 @@
         max-width: 80%;
         margin-left: auto;
     }
-
     #chatbox .bot-message {
         text-align: left;
         margin: 10px 0;
@@ -153,7 +136,6 @@
         border-radius: 15px 15px 15px 5px;
         max-width: 80%;
     }
-
     #userInput {
         width: calc(100% - 100px);
         padding: 12px;
@@ -161,7 +143,6 @@
         border-radius: 8px;
         font-size: 15px;
     }
-
     button01 {
         padding: 12px 20px;
         border: none;
@@ -172,12 +153,10 @@
         font-size: 15px;
         transition: all 0.3s ease;
     }
-
     button01:hover {
         background-color: #0056b3;
         transform: scale(1.05);
     }
-
     #helpButton {
         position: fixed;
         bottom: 20px;
@@ -194,12 +173,10 @@
         transition: all 0.3s ease;
         z-index: 9998;
     }
-
     #helpButton:hover {
         background: linear-gradient(45deg, #000, #1d72ff);
         transform: translateY(-5px) scale(1.1);
     }
-
     .closeButton {
         position: absolute;
         top: 10px;
@@ -211,7 +188,6 @@
         color: #666;
         transition: color 0.3s;
     }
-
     .closeButton:hover {
         color: #ff0000;
     }
@@ -224,11 +200,7 @@
   --light:#718096;
   --white:#fff;
 }
-
 *{margin:0;padding:0;box-sizing:border-box;}
-
-
-
 /* reveal animation */
 .reveal{
   opacity:0;
@@ -239,13 +211,9 @@
   opacity:1;
   transform:none;
 }
-
-
-
-
 /* header */
 .about-hero {
-  background: 
+  background:
     linear-gradient(rgba(10,25,47,.75), rgba(10,25,47,.75)),
     url('assets/images/about-us/banner.avif');
   background-size: cover;
@@ -254,7 +222,6 @@
   text-align: center;
   padding: 120px 20px;
 }
-
 .about-hero h1{
   font-size:3.4rem;
     color: #14d7d7;
@@ -265,39 +232,33 @@
   margin:15px auto 0;
      color: #14d7d7;
 }
-
 /* layout */
 .section{
   max-width:1200px;
   margin:100px auto;
   padding:0 20px;
 }
-
 .section-grid{
   display:grid;
   grid-template-columns:1fr 1fr;
   gap:50px;
   align-items:center;
 }
-
 .section img{
   width:100%;
   border-radius:18px;
   box-shadow:0 15px 40px rgba(0,0,0,.08);
 }
-
 .section h2{
   font-size:2.4rem;
   color:var(--navy);
   margin-bottom:20px;
 }
-
 .section p{
   color:var(--light);
   font-size:1.05rem;
   margin-bottom:15px;
 }
-
 /* dark section */
 .dark{
   background:var(--navy);
@@ -306,7 +267,6 @@
 }
 .dark h2{color:var(--cyan);}
 .dark p{color:#cbd5e1;}
-
 /* stats */
 .stats{
   display:grid;
@@ -324,8 +284,77 @@
   color:var(--cyan);
   font-size:2.2rem;
 }
-</style>
 
+/* Added Responsive Improvements */
+@media (max-width: 992px) {
+    .about-hero {
+        padding: 80px 20px;
+    }
+    .about-hero h1 {
+        font-size: 2.8rem;
+    }
+    .about-hero p {
+        font-size: 1.2rem;
+    }
+}
+
+@media (max-width: 768px) {
+    .section-grid {
+        grid-template-columns: 1fr;
+        gap: 30px;
+        text-align: center;
+    }
+    .section-grid > div {
+        order: 1;
+    }
+    .section-grid img {
+        order: 2;
+        max-width: 90%;
+        margin: 0 auto;
+    }
+    .section h2 {
+        font-size: 2rem;
+    }
+    .stats {
+        grid-template-columns: 1fr;
+    }
+    .stat {
+        padding: 25px;
+    }
+    .logo1 img {
+        height: 80px !important;
+    }
+    #chatContainer {
+        width: 95%;
+        max-width: none;
+        left: 2.5%;
+        right: 2.5%;
+        bottom: 80px;
+    }
+    #helpButton {
+        padding: 12px 16px;
+        font-size: 14px;
+    }
+}
+
+@media (max-width: 480px) {
+    .about-hero {
+        padding: 60px 15px;
+    }
+    .about-hero h1 {
+        font-size: 2.2rem;
+    }
+    .about-hero p {
+        font-size: 1rem;
+    }
+    .section {
+        margin: 60px auto;
+    }
+    .dark {
+        padding: 60px 15px;
+    }
+}
+</style>
 <body class="bg-1">
     <!-- chatbot start -->
     <div id="chatContainer">
@@ -336,16 +365,13 @@
             <button01 onclick="sendMessage()">Send</button01>
         </div>
     </div>
-
     <button id="helpButton" style="font-style: italic;">Need Help</button>
     <!-- chat bot khatam -->
-
     <!--================= Preloader Section Start Here =================-->
     <div id="rts__preloader">
         <div class="loader">SMHF <span>GLOBAL</span></div>
     </div>
     <!--================= Preloader End Here =================-->
-
     <!--================= Header Section Start Here =================-->
     <div class="anywere"></div>
     <header id="rtsHeader">
@@ -358,7 +384,6 @@
                             <img class="logo-default" style="height: 100px;" src="assets/images/smhf dark logo.png" alt=" SMHF GLOBAL">
                             <img class="logo-dark" style="height: 100px;" src="assets/images/smhf logo.png" alt="SMHF GLOBAL">
                         </a>
-
                         <div class="header-right">
                             <!-- karachi api Start -->
                             <a href="">Karachi</a>
@@ -411,7 +436,6 @@
             <div class="body-overlay"></div>
     </header>
     <!--================= Header Section End Here =================-->
-
     <!-- Main Container -->
   <header class="about-hero">
   <div class="reveal">
@@ -419,7 +443,6 @@
     <p>The intelligence backbone behind global infrastructure, signals, and future-ready journalism.</p>
   </div>
 </header>
-
 <section class="section">
   <div class="section-grid reveal">
     <div>
@@ -437,7 +460,6 @@
     <img src="assets/images/about-us/first.avif">
   </div>
 </section>
-
 <section class="section">
   <div class="section-grid reveal">
     <div>
@@ -453,7 +475,6 @@
           <img src="assets/images/about-us/second.png">
   </div>
 </section>
-
 <section class="dark">
   <div class="section reveal">
     <h2>Our Signal Intelligence System</h2>
@@ -461,7 +482,6 @@
       SMHF Global operates a proprietary signal intelligence framework that monitors
       global infrastructure health, connectivity strength, and real-time system performance.
     </p>
-
     <div class="stats">
       <div class="stat">
         <h3>1,248+</h3>
@@ -478,7 +498,6 @@
     </div>
   </div>
 </section>
-
 <section class="section">
   <div class="section-grid reveal">
     <div>
@@ -494,7 +513,6 @@
     <img src="assets/images/about-us/third.avif">
   </div>
 </section>
-
     <!--================= Footer Start Here =================-->
     <div class="footer1">
         <div class="container">
@@ -554,7 +572,6 @@
         </div>
     </div>
     <!--================= Footer End Here =================-->
-
     <!-- Color switcher -->
     <div class="modal-sidebar-scroll rts-dark-light">
         <ul>
@@ -562,11 +579,9 @@
             <li><span>Light</span><i class="rts-go-light far fa-sun"></i></li>
         </ul>
     </div>
-
     <!--================= Scroll to Top Start =================-->
     <div class="scroll-top-btn"><i class="fas fa-angle-up arrow-up"></i><i class="fas fa-circle-notch"></i></div>
     <!--================= Scroll to Top End =================-->
-
     <!-- Scripts remain unchanged -->
     <script src="assets/js/vendors/jquery-3.6.0.min.js"></script>
     <script src="assets/js/vendors/bootstrap.min.js"></script>
@@ -575,7 +590,6 @@
     <script src="assets/js/vendors/rtsmenu.js"></script>
     <script src="assets/js/vendors/jquery.magnific-popup.min.js"></script>
     <script src="assets/js/main.js"></script>
-
     <!-- karachi weather script (unchanged) -->
     <script>
         async function fetchWeather() {
@@ -600,7 +614,6 @@
             document.getElementById('time').innerText = `${timeString}`;
         }, 1000);
     </script>
-
     <!-- chatbot script (unchanged except minor visual tweak in append) -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
@@ -616,7 +629,6 @@
                 chatbox.scrollTop(chatbox[0].scrollHeight);
             }
         }
-
         function getBotResponse(input) {
             const lowerInput = input.toLowerCase().trim();
             if (lowerInput === "move home") {
@@ -637,11 +649,9 @@
                 return "Sorry, I can't answer that question. Please visit the SMHF website for more information.";
             }
         }
-
         function redirectToPage(pageUrl) {
             window.location.href = pageUrl;
         }
-
         function closeChat() {
             $('#chatContainer').css('animation', 'fadeOut 0.3s ease forwards');
             setTimeout(() => {
@@ -649,7 +659,6 @@
                 $('#helpButton').show();
             }, 300);
         }
-
         $(document).ready(function () {
             $('#helpButton').click(function () {
                 $('#chatContainer').toggle();
@@ -671,20 +680,7 @@ const observer=new IntersectionObserver(entries=>{
   if(e.isIntersecting)e.target.classList.add("active");
  });
 },{threshold:.15});
-
 document.querySelectorAll(".reveal").forEach(el=>observer.observe(el));
 </script>
 </body>
-
 </html>
-
-
-
-
-
-
-
-
-
-
-
