--- a/about.html
+++ b/about.html
@@ -406,7 +406,7 @@
                             <div class="rts-menu rts-menu1 m-0">
                                 <nav class="menus menu-toggle">
                                     <ul class="nav__menu">
-                                        <li><"href="index.html">Home</a></li>
+                                        <li><a"href="index.html">Home</a></li>
                                         <li><a"href="contact.html">Contact</a></li>
                                         <li><a"href="about.html">About</a></li>
                                     </ul>
@@ -684,4 +684,5 @@ document.querySelectorAll(".reveal").forEach(el=>observer.observe(el));
 </script>
 </body>
 </html>
+
 
