--- a/about.html
+++ b/about.html
@@ -406,9 +406,9 @@
                             <div class="rts-menu rts-menu1 m-0">
                                 <nav class="menus menu-toggle">
                                     <ul class="nav__menu">
-                                        <li><a"href="index.html">Home</a></li>
-                                        <li><a"href="contact.html">Contact</a></li>
-                                        <li><a"href="about.html">About</a></li>
+                                            <li><a class="mm-link" href="index.html">Home</a></li>
+                        <li><a class="mm-link" href="contact.html">Contact</a></li>
+                        <li><a class="mm-link" href="about.html">About</a></li>
                                     </ul>
                                 </nav>
                             </div>
@@ -684,5 +684,6 @@ document.querySelectorAll(".reveal").forEach(el=>observer.observe(el));
 </script>
 </body>
 </html>
+
 
 
