--- a/about.html
+++ b/about.html
@@ -32,69 +32,7 @@
         margin-right: auto;
     }
     /* logo styling khatam */
-    .container01 {
-        max-width: 900px;
-        margin: 50px auto;
-        padding: 20px;
-        background-color: white;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        border-radius: 10px;
-        text-align: center;
-    }
-    iframe {
-        width: 100%;
-        height: 400px;
-        border: none;
-        border-radius: 10px;
-    }
-    /* karachi weather ki styling */
-    .container01 {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        padding: 15px;
-    }
-    a {
-        text-decoration: none;
-        color: #333;
-        font-size: 18px;
-        font-weight: bold;
-        margin-right: 5px;
-        font-weight: bold;
-        font-style: italic;
-    }
-    #temp {
-        font-size: 15px;
-        margin: 0;
-        font-weight: bold;
-        font-style: italic;
-        color: #007bff;
-    }
-    #time {
-        font-size: 15px;
-        margin: 2px 0 0;
-        font-weight: bold;
-        font-style: italic;
-        color: #555;
-    }
-    @media screen and (max-width: 320px) {
-        .container01 {
-            flex-direction: column;
-            text-align: center;
-        }
-        a {
-            margin-bottom: 10px;
-        }
-    }
-    @media screen and (max-width: 513px) {
-        .container01 {
-            flex-direction: column;
-            text-align: center;
-        }
-        a {
-            margin-bottom: 10px;
-        }
-    }
+   
     /* Chatbot Enhanced Styling */
     #chatContainer {
         background: linear-gradient(145deg, #ffffff, #f0f8ff);
@@ -220,7 +158,12 @@
   background-position: center;
   color: #fff;
   text-align: center;
-  padding: 100px 40px;
+
+  /* size adjusted */
+  padding: 90px 30px;     /* height thodi zyada */
+  max-width: 1200px;      /* width thodi badi */
+  margin: 70px auto;     /* balanced gaps */
+  border-radius: 18px;
 }
 .about-hero h1{
   font-size:3.4rem;
@@ -684,6 +627,7 @@ document.querySelectorAll(".reveal").forEach(el=>observer.observe(el));
 </script>
 </body>
 </html>
+
 
 
 
