--- a/index.html
+++ b/index.html
@@ -1941,9 +1941,11 @@
     </script>
     
     <!-- chatbot script khatam -->
-
+<!-- new fetch js start -->
+<script src="assets/js/news.js"></script>
 
 </body>
+
 
 
 
